# M.D.R

./: CMakeLists.txt  README.md  cmakecompile.sh  codecounter.sh  exec.sh
ressources/: screens.txt
source/: CMakeLists.txt  main.cc  oldmain.cc
source/assets/: chartegraph.md  logov1.kra
source/dmx/: pro_driver.h  stdafx.cpp  stdafx.h  usbPro.cpp  usbPro.hh
source/global/: utils.cc  utils.hh
source/gui/: examplewindow.cc  examplewindow.h  gtk.cc  labeledoptionmenu.cc  labeledoptionmenu.h
source/midi/: animations.cc  animations.hh  communication.cc  communication.hh  controler.cc  controler.hh  controller.cc  controller.hh  morefunctions.cc  xtouch.hh
source/midi/ctrlFunctions/: buttons.cc  faders.cc  lcds.cc  rings.cc  segments.cc  soundpeaks.cc
source/old/: helloworldmain.cc
source/osc/: cmeter.sh  compilefft.sh  compiletest.sh  fft.cc  fftgui.cc  meter.cc  oldfft.cc  test.cc  xr18_control  xr18_fft  xr18_fft_visualization
